--- a/paper_arxiv/02-bayes_cpm_endmatter.Rmd
+++ b/paper_arxiv/02-bayes_cpm_endmatter.Rmd
@@ -1,3 +1,4 @@
+\newpage
 ## Acknowledgments
 
 We would like to thank Dr. John Koethe for providing the biomarker data and Yuqi Tian and Dr. Chun Li for helpful comments and review of early versions of this work. This study was supported by funding from United States National Institutes of Health (R01AI093234, P30AI110527, K23100700, K23AT002508, P30AI54999, and UL1TR000445). This project was also supported in part by an appointment to the Research Participation Program at the Office of Biostatistics, Center for Drug Evaluation and Research, U.S. Food and Drug Administration, administered by the Oak Ridge Institute for Science and Education through an interagency agreement between the U.S. Department of Energy and FDA.
