--- a/paper_arxiv/04-bayes_cpm_supp.Rmd
+++ b/paper_arxiv/04-bayes_cpm_supp.Rmd
@@ -5,27 +5,35 @@
 <!-- https://stackoverflow.com/questions/50223141/rmarkdown-bookdown-separate-figure-numbering-for-supplemental-section -->
 \beginsupplement
 
-```{r simplt-pars-3, fig.cap="Bias in parameters for simulations using loglog link", fig.align='center', out.width='90%'}
+```{r simplt-pars-3, fig.cap="Bias in parameters for simulations using loglog link", fig.align='center', out.width='65%'}
 knitr::include_graphics(file.path(wd,"fig","sim_d_pars.png"))
 ```
 
 
-```{r simplt-cdf-2, fig.cap="Percent bias in conditional CDF for simulations using logit link", fig.align='center', out.width='90%'}
+```{r simplt-cdf-2, fig.cap="Percent bias in conditional CDF for simulations using logit link", fig.align='center', out.width='65%'}
 knitr::include_graphics(file.path(wd,"fig","sim_c_cdf.png"))
 ```
 
-```{r simplt-cdf-3, fig.cap="Percent bias in conditional CDF for simulations using loglog link", fig.align='center', out.width='90%'}
+```{r simplt-cdf-3, fig.cap="Percent bias in conditional CDF for simulations using loglog link", fig.align='center', out.width='75%'}
 knitr::include_graphics(file.path(wd,"fig","sim_d_cdf.png"))
 ```
 
-```{r simplt-mn-2, fig.cap="Percent bias in conditional mean for simulations using logit link", fig.align='center', out.width='90%'}
+```{r simplt-mn-2, fig.cap="Percent bias in conditional mean for simulations using logit link", fig.align='center', out.width='75%'}
 knitr::include_graphics(file.path(wd,"fig","sim_c_mn.png"))
 ```
 
-```{r simplt-med-2, fig.cap="Percent bias in conditional median for simulations using logit link", fig.align='center', out.width='90%'}
+```{r simplt-med-2, fig.cap="Percent bias in conditional median for simulations using logit link", fig.align='center', out.width='75%'}
 knitr::include_graphics(file.path(wd,"fig","sim_c_med.png"))
 ```
 
-```{r simplt-med-3, fig.cap="Percent bias in conditional median for simulations using loglog link", fig.align='center', out.width='90%'}
+```{r simplt-med-3, fig.cap="Percent bias in conditional median for simulations using loglog link", fig.align='center', out.width='75%'}
 knitr::include_graphics(file.path(wd,"fig","sim_d_med.png"))
+```
+
+```{r simplt-q20-b, fig.cap="Bias in conditional 20th percentile for simulations using logit link", fig.align='center', out.width='75%'}
+knitr::include_graphics(file.path(wd,"fig","sim_c_q20.png"))
+```
+
+```{r simplt-q20-c, fig.cap="Bias in conditional 20th percentile for simulations using loglog link", fig.align='center', out.width='75%'}
+knitr::include_graphics(file.path(wd,"fig","sim_d_q20.png"))
 ```
