--- a/hiv_ex.rmd
+++ b/hiv_ex.rmd
@@ -261,10 +261,12 @@ mcmc_intervals(prob_outer = 0.95) + scale_y_discrete(labels =parse(text=main_par
 il_6_postb <- as.matrix(fit_il_6_loglog2$stanfit, pars=main_pars[c(3,4,5,7)])  %>%
 mcmc_intervals(prob_outer = 0.95) + scale_y_discrete(labels = parse(text=main_pars_labs2[c(3,4,5,7)]))
 
-plot_grid(il_6_posta,il_6_postb,ncol=1)
+pg_il_6_a<-plot_grid(il_6_posta,il_6_postb,ncol=1)
+
+pg_il_6_a
 
 ggsave(file.path(figdir,"il_6_post_v2.png"),width=6,height=4)
-
+ggsave(file.path(figdir,"il_6_post_v2.tiff"),width=6,height=4,bg='white',dpi=600)
 
 # stan_plot(fit_il_6_loglog2$stanfit, pars=main_pars) + 
 #   scale_y_discrete(breaks=paste0("b[",1:7,"]"),
@@ -277,7 +279,7 @@ il_6_ct_plt<-plot(fit_il_6_loglog2$stanfit,pars=c(paste0("cutpoints[",1:173,"]")
 # il_6_ct_plt$data %>% mutate(y_rev=rev(y)) %>% 
 #   ggplot(aes(x=y_rev,y=m)) + geom_point()
 
-il_6_ct_plt$data %>% mutate(y_rev=rev(y)) %>% 
+pg_il_6_b <- il_6_ct_plt$data %>% mutate(y_rev=rev(y)) %>% 
   ggplot(aes(x=y_rev,y=m)) + geom_line(aes(color='median')) +
   geom_ribbon(aes(ymin=l,ymax=h,fill='50% int'))+
   geom_ribbon(aes(ymin=ll,ymax=hh,fill='95% int'))+
@@ -288,7 +290,13 @@ il_6_ct_plt$data %>% mutate(y_rev=rev(y)) %>%
   labs(color='', fill='') +
   ylab(expression(hat(gamma)[j]))+xlab("j")
 
+pg_il_6_b
+
 ggsave(file.path(figdir,"il_6_post_ct.png"),width=6,height=4)
+ggsave(file.path(figdir,"il_6_post_ct.tiff"),width=6,height=4,bg='white',dpi=600)
+
+plot_grid(pg_il_6_a,pg_il_6_b,nrow=1)
+ggsave(file.path(figdir,"il_6_post_est_ct.tiff"),width=8,height=4,bg='white',dpi=600)
 
 # +
 #   theme(axis.title.x=element_text(size=fctsiz),
@@ -340,6 +348,7 @@ y_reps_il_6 %>% filter(rep<=ndr_plt|rep>998) %>% ggplot(aes(x=value, group=rep, 
 scale_color_manual(name = '', values = setNames(c('blue','lightblue'), c('y', 'yrep'))) + ylab('') + xlab('IL-6')
 
 ggsave(file.path(figdir,"il_6_postpred.png"),width=6,height=4)
+ggsave(file.path(figdir,"il_6_postpred.tiff"),width=6,height=4,dpi=600)
 ```
 
 
@@ -413,7 +422,7 @@ ggplot(data=il_6_trans_dat, aes(x=`IL-6`,y=cp_il_6)) + geom_step() + ylab(expres
 # take sqrt transform and then is distributed as Gumbel ?
 
 ggsave(file.path(figdir,"il_6_trans_v2.png"),width=6,height=4)
-
+ggsave(file.path(figdir,"il_6_trans_v2.tiff"),width=6,height=4,dpi=600)
 
 # ggplot(data=il_6_trans_dat_nocnt, aes(x=`IL-6`,y=cp_il_6_nocnt, color="est")) + geom_step() + ylab(expression(gamma[j])) + xlim(c(1,10)) + 
 #   stat_function(fun=log, mapping = aes(color = "log")) + 
@@ -452,9 +461,10 @@ il_6_q90_dat<-q90_summ_il_6 %>%
 il_6_plt_dat <- rbind(il_6_mn_dat,il_6_med_dat,il_6_q90_dat) 
 
 ggplot(il_6_plt_dat) + geom_line(aes(x=bmi_c,y=`il-6`,color=statistic)) +
-geom_ribbon(aes(x=bmi_c,ymin=q2.5,ymax=q97.5,fill=statistic),alpha=0.2)+ylab("IL-6")+xlab("Difference from mean BMI")
+geom_ribbon(aes(x=bmi_c,ymin=q2.5,ymax=q97.5,fill=statistic),alpha=0.2)+ylab("IL-6")+xlab("difference from mean BMI")
 
 ggsave(file.path(figdir,"il_6_bmi.png"),width=6,height=3.5)
+ggsave(file.path(figdir,"il_6_bmi.tiff"),width=6,height=3.5,dpi=600)
 ```
 
 ```{r, eval=FALSE}
@@ -597,9 +607,11 @@ mcmc_intervals(prob_outer = 0.95) + scale_y_discrete(labels = parse(text=main_pa
 il_1_beta_postb <- as.matrix(fit_il_1_beta_loglog2$stanfit, pars=main_pars[c(3,4,5,7)])  %>%
 mcmc_intervals(prob_outer = 0.95) + scale_y_discrete(labels = parse(text=main_pars_labs2[c(3,4,5,7)]))
 
-plot_grid(il_1_beta_posta,il_1_beta_postb,ncol=1)
+pg_il_1_beta_a <- plot_grid(il_1_beta_posta,il_1_beta_postb,ncol=1)
 
+pg_il_1_beta_a
 ggsave(file.path(figdir,"il_1_beta_post_v2.png"),width=6,height=4)
+ggsave(file.path(figdir,"il_1_beta_post_v2.tiff"),width=6,height=4,bg='white',dpi=600)
 
 # stan_plot(fit_il_1_beta_loglog2$stanfit, pars=main_pars) + 
 #   scale_y_discrete(breaks=paste0("b[",1:7,"]"),
@@ -612,7 +624,7 @@ il_1_beta_ct_plt<-plot(fit_il_1_beta_loglog2$stanfit,pars=c(paste0("cutpoints[",
 # il_1_beta_ct_plt$data %>% mutate(y_rev=rev(y)) %>% 
 #   ggplot(aes(x=y_rev,y=m)) + geom_point()
 
-il_1_beta_ct_plt$data %>% mutate(y_rev=rev(y)) %>% 
+pg_il_1_beta_b <- il_1_beta_ct_plt$data %>% mutate(y_rev=rev(y)) %>% 
   ggplot(aes(x=y_rev,y=m)) + geom_line(aes(color='median')) +
   geom_ribbon(aes(ymin=l,ymax=h,fill='50% int'))+
   geom_ribbon(aes(ymin=ll,ymax=hh,fill='95% int'))+
@@ -623,7 +635,12 @@ il_1_beta_ct_plt$data %>% mutate(y_rev=rev(y)) %>%
   labs(color='', fill='') +
   ylab(expression(hat(gamma)[j]))+xlab("j")
 
+pg_il_1_beta_b
 ggsave(file.path(figdir,"il_1_beta_post_ct.png"),width=6,height=4)
+ggsave(file.path(figdir,"il_1_beta_post_ct.tiff"),width=6,height=4,bg='white',dpi=600)
+
+plot_grid(pg_il_1_beta_a,pg_il_1_beta_b,nrow=1)
+ggsave(file.path(figdir,"il_1_beta_post_est_ct.tiff"),width=8,height=4,bg='white',dpi=600)
 
 
 if(0){
@@ -679,7 +696,7 @@ y_reps_il_1_beta %>% filter(rep<=ndr_plt|rep>998) %>% ggplot(aes(x=value, group=
 scale_color_manual(name = '', values = setNames(c('blue','lightblue'), c('y', 'yrep'))) + ylab('') + xlab(expression("IL-1-"*beta))
 
 ggsave(file.path(figdir,"il_1_beta_postpred.png"),width=6,height=4)
-
+ggsave(file.path(figdir,"il_1_beta_postpred.tiff"),width=6,height=4,dpi=600)
 ```
 
 ```{r}
@@ -748,6 +765,7 @@ ggsave(file.path(figdir,"il_1_beta_trans.png"),width=6,height=4)
 ggplot(data=il_1_beta_trans_dat,aes(x=`IL-1-beta`,y=cp_il_1_beta)) + geom_step() + ylab(expression(gamma[j])) + ylim(c(-0.5,2.5)) + xlim(c(0,3.0)) + xlab(expression(IL-1-beta))
 
 ggsave(file.path(figdir,"il_1_beta_trans_v2.png"),width=6,height=4)
+ggsave(file.path(figdir,"il_1_beta_trans_v2.tiff"),width=6,height=4,dpi=600)
 ```
 
 ```{r il_1_beta_bmi_dat}
@@ -776,7 +794,9 @@ il_1_beta_plt_dat <- rbind(il_1_beta_mn_dat,il_1_beta_med_dat,il_1_beta_q90_dat)
 
 ggplot(il_1_beta_plt_dat) + geom_line(aes(x=bmi_c,y=`il-1-beta`,color=statistic)) +
 geom_ribbon(aes(x=bmi_c,ymin=q2.5,ymax=q97.5,fill=statistic),alpha=0.2)+
-  xlab("Difference from mean BMI")+ylab(expression(IL-1-beta))
+  xlab("difference from mean BMI")+ylab(expression(IL-1-beta))
+
 ggsave(file.path(figdir,"il_1_beta_bmi.png"),width=6,height=3.5)
+ggsave(file.path(figdir,"il_1_beta_bmi.tiff"),width=6,height=3.5,dpi=600)
 ```
 
